--- a/settings.json
+++ b/settings.json
@@ -3,6 +3,8 @@
   "files.autoSave": "onFocusChange",
   // Auto-format on save
   "editor.formatOnSave": true,
+  // Use sticky scroll like Xcode
+  "editor.stickyScroll.enabled": true,
   // Use Fira Mono
   "editor.fontFamily": "'FuraMono Nerd Font Mono', Menlo, Monaco, 'Courier New', monospace",
   // Use Ayu Dark
