Add fast-file-search in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,6 +48,7 @@ bind -N "Open copy mode" Escape copy-mode
 # Use <prefix><C-f> for to open a smart backwards search
 bind -N "Perform backwards search" '/' copy-mode \; send-keys ?
 bind -N "Perform backwards search for URLs" 'C-u' copy-mode \; send-keys -X search-backward "(https?://|git@|git://|ssh://|ftp://|file:///)[[:alnum:]?=%/_.:,;~@!#$&()*+-]*"
+bind -N "Perform backwards search for files" 'C-t' copy-mode \; send-keys -X search-backward "(^|^\.|[[:space:]]|[[:space:]]\.|[[:space:]]\.\.|^\.\.)[[:alnum:]~_-]*/[][[:alnum:]_.#$%&+=/@-]*"
 bind -N "Perform smart backwards search" 'C-f' display-popup -E "fish -c tmux_fzf_search"
 
 # Use v, y, and p to begin visual selection and yank/paste like vim
