--- a/settings.json
+++ b/settings.json
@@ -7,11 +7,11 @@
   "editor.stickyScroll.enabled": true,
   // Use Fira Mono
   "editor.fontFamily": "'FiraMono Nerd Font Mono', Menlo, Monaco, 'Courier New', monospace",
-  // Show relative line numbers instead of absolute
+  // Show relative line numbers instead of absolute (like vim smartcase)
   "editor.lineNumbers": "relative",
   // Show bracket pairs for the active bracket
   "editor.guides.bracketPairs": "active",
-  // Use Ayu Dark
+  // Use Ayu Dark theme
   "workbench.colorTheme": "Ayu Dark Bordered",
   // Default to Prettier for JS/TS/JSON formatting
   "[javascript]": {
@@ -73,7 +73,21 @@
     "line-length": false,
     "single-trailing-newline": false
   },
-  // In terminal pane on Mac, use option key as meta for e.g. M-e to edit command line on fish
+  // Default to fish for integrated terminal
+  "terminal.integrated.profiles.osx": {
+    "bash": null,
+    "zsh": null,
+    "fish": {
+      "path": "/opt/homebrew/bin/fish",
+      "args": ["-l"],
+      "icon": "terminal-tmux"
+    }
+  },
+  // Send workspace folder name to integrated terminal
+  "terminal.integrated.env.osx": {
+    "VSCODE_WORKSPACE": "${workspaceFolderBasename}"
+  },
+  // In integrated terminal on Mac, use option key as meta for e.g. M-e to edit command line on fish
   "terminal.integrated.macOptionIsMeta": true,
   // VSCodeVim plugins
   "vim.camelCaseMotion.enable": true,
