--- a/.config/Brewfile
+++ b/.config/Brewfile
@@ -17,11 +17,6 @@ brew "dust"
 brew "exa"
 # Better find
 brew "fd"
-# Fira Code / Fira Mono Nerd Fonts
-cask "font-fira-code-nerd-font"
-cask "font-fira-mono-nerd-font"
-# Route URLs to different browsers
-cask "finicky"
 # Better shell
 brew "fish"
 # Fuzzy finder
@@ -46,16 +41,12 @@ brew "node"
 brew "pnpm"
 # Better make (for command running, at least)
 brew "just"
-# Better Spotlight
-cask "raycast"
 # Better grep
 brew "ripgrep"
 # Shell linter
 brew "shellcheck"
 # Better sed
 brew "sd"
-# Quick-find items on the screen
-cask "shortcat"
 # Command prompt
 brew "starship"
 # Swift formatting
@@ -70,10 +61,22 @@ brew "tig"
 brew "tmux"
 # Directory watcher
 brew "watchexec"
-# Install Xcode easily
-cask "xcodes"
 # Better cd
 brew "zoxide"
+
+# Fira Code / Fira Mono Nerd Fonts
+cask "font-fira-code-nerd-font"
+cask "font-fira-mono-nerd-font"
+# Route URLs to different browsers
+cask "finicky"
+# Better Spotlight
+cask "raycast"
+# Quick-find items on the screen
+cask "shortcat"
+# VS Code
+cask "visual-studio-code"
+# Install Xcode easily
+cask "xcodes"
 
 # Astro support
 vscode "astro-build.astro-vscode"
