--- a/.config/Brewfile
+++ b/.config/Brewfile
@@ -37,6 +37,8 @@ brew "markdownlint-cli"
 brew "neovim"
 # Up-to-date node
 brew "node"
+# Install Python executables easily
+brew "pipx"
 # Better npm
 brew "pnpm"
 # Better make (for command running, at least)
