--- a/settings.json
+++ b/settings.json
@@ -101,5 +101,7 @@
   "vim.sneakUseIgnorecaseAndSmartcase": true,
   "vim.showMarksInGutter": true,
   "vim.smartRelativeLine": true,
-  "vim.useSystemClipboard": true
+  "vim.useSystemClipboard": true,
+  "editor.accessibilitySupport": "off",
+  "deno.path": "/opt/homebrew/bin/deno"
 }
