Add vs code as difftool / mergetool

--- a/.gitconfig
+++ b/.gitconfig
@@ -32,3 +32,13 @@
     oops = "commit -a --no-edit --amend"
 [push]
 	autoSetupRemote = true
+[diff]
+    tool = vscode
+[difftool]
+    prompt = false
+[difftool "vscode"]
+    cmd = code --wait --diff $LOCAL $REMOTE
+[merge]
+    tool = vscode
+[mergetool "vscode"]
+    cmd = code --wait --merge $REMOTE $LOCAL $BASE $MERGED
