Add calibre cask

--- a/.config/Brewfile
+++ b/.config/Brewfile
@@ -70,6 +70,8 @@ brew "watchexec"
 # Better cd
 brew "zoxide"
 
+# Calibre ebook manager
+cask "calibre"
 # Fira Code / Fira Mono Nerd Fonts
 cask "font-fira-code-nerd-font"
 cask "font-fira-mono-nerd-font"
