--- a/.config/Brewfile
+++ b/.config/Brewfile
@@ -27,6 +27,8 @@ brew "fzf"
 brew "gh"
 # Better diff viewer
 brew "git-delta"
+# gif optimizer
+brew "gifsicle"
 # Better curl
 brew "httpie"
 # Plain-text accounting
