--- a/.gitconfig
+++ b/.gitconfig
@@ -18,7 +18,6 @@
     c = "!fish -c 'git_fzf_checkout'"
     cam = "!fish -c 'git_commit_all_message $argv'"
     camp = "!fish -c 'git_commit_all_message_push $argv'"
-    ci = "!fish -c 'git_fzf_interactive_checkout'"
     d = "diff HEAD"
     df = "!fish -c 'git_fzf_diff'"
     dfn = "!fish -c 'git_fzf_diff_name_only'"
@@ -27,6 +26,7 @@
     lfc = "!fish -c 'git_fzf_commit_select_copy'"
     m = "!fish -c 'git_fzf_merge'"
     p = "push"
+    r = "!fish -c 'git_fzf_restore'"
     s = "status"
     unstage = "reset HEAD --"
     oops = "commit -a --no-edit --amend"
