Enable codeium markdown

--- a/settings.json
+++ b/settings.json
@@ -127,5 +127,9 @@
       "before": ["g", ">"],
       "commands": ["shiftArgumentRight"]
     }
-  ]
+  ],
+  "codeium.enableConfig": {
+    "*": true,
+    "markdown": true
+  }
 }
