--- a/.gitconfig
+++ b/.gitconfig
@@ -14,6 +14,7 @@
 [init]
 	defaultBranch = main
 [alias]
+    a = "add ."
     bd = "!fish -c 'git_fzf_branch_delete'"
     c = "!fish -c 'git_fzf_checkout'"
     cam = "!fish -c 'git_commit_all_message $argv'"
