Add ast-grep to brewfile

--- a/.config/Brewfile
+++ b/.config/Brewfile
@@ -5,6 +5,8 @@ tap "homebrew/cask-fonts"
 # Linty
 tap "rwblickhan/linty"
 
+# Syntasx-aware sed
+brew "ast-grep"
 # Better cat
 brew "bat"
 # Terminal cheatsheets
