--- a/settings.json
+++ b/settings.json
@@ -35,6 +35,9 @@
   "[jsonc]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
+  "[html]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
   // Default to typst-lsp for Typst formatting
   "[typst]": {
     "editor.defaultFormatter": "nvarner.typst-lsp"
