Switch back to zsh as defualt profile

--- a/settings.json
+++ b/settings.json
@@ -135,5 +135,6 @@
       "before": ["g", ">"],
       "commands": ["shiftArgumentRight"]
     }
-  ]
+  ],
+  "terminal.integrated.defaultProfile.osx": "zsh"
 }
