--- a/.config/Brewfile
+++ b/.config/Brewfile
@@ -73,6 +73,8 @@ brew "tealdeer"
 brew "tig"
 # Terminal multiplexer
 brew "tmux"
+# tmux automation
+brew "tmuxinator"
 # LaTeX alternative
 brew "typst"
 # Directory watcher
