Add H/L instead of $/^ for vs code too

--- a/settings.json
+++ b/settings.json
@@ -134,6 +134,34 @@
     {
       "before": ["g", ">"],
       "commands": ["shiftArgumentRight"]
+    },
+    {
+      "before": ["L"],
+      "after": ["$"]
+    },
+    {
+      "before": ["H"],
+      "after": ["^"]
+    }
+  ],
+  "vim.visualModeKeyBindings": [
+    {
+      "before": ["L"],
+      "after": ["$"]
+    },
+    {
+      "before": ["H"],
+      "after": ["^"]
+    }
+  ],
+  "vim.operatorPendingModeKeyBindings": [
+    {
+      "before": ["L"],
+      "after": ["$"]
+    },
+    {
+      "before": ["H"],
+      "after": ["^"]
     }
   ],
   "terminal.integrated.defaultProfile.osx": "zsh"
