--- a/.config/tmuxinator/codez.yml
+++ b/.config/tmuxinator/codez.yml
@@ -1,11 +1,11 @@
 # /Users/rwblickhan/.config/tmuxinator/codez.yml
 
 name: codez
-root: ~/sandbox/codez
+root: ~/sandbox/asana
 
 windows:
   - codez:
       layout: even-horizontal
       panes:
-        - git up
-        - z sand sync -k webapp
+        - fish -c 'git up'
+        - fish -c 'z sand sync -k webapp'
