--- a/.gitconfig
+++ b/.gitconfig
@@ -40,3 +40,5 @@
     tool = vscode
 [mergetool "vscode"]
     cmd = code --wait --merge $REMOTE $LOCAL $BASE $MERGED
+[mergetool]
+	keepBackup = false
