--- a/settings.json
+++ b/settings.json
@@ -125,8 +125,8 @@
   "vim.showMarksInGutter": true,
   "vim.smartRelativeLine": true,
   "vim.useSystemClipboard": true,
-  // Emulate vim-swap via shifter extension
   "vim.normalModeKeyBindings": [
+    // Emulate vim-swap via shifter extension
     {
       "before": ["g", "<"],
       "commands": ["shiftArgumentLeft"]
@@ -134,6 +134,10 @@
     {
       "before": ["g", ">"],
       "commands": ["shiftArgumentRight"]
+    },
+    {
+      "before": ["g", "r"],
+      "commands": ["references-view.findReferences"]
     },
     {
       "before": ["L"],
