Revert "Update default formatter"
This reverts commit 5ef9684df035c2552d3c287d5c412059c7778a2d.

--- a/settings.json
+++ b/settings.json
@@ -21,8 +21,31 @@
   "workbench.quickOpen.preserveInput": true,
   // Enable sticky scroll in tree views
   "workbench.tree.enableStickyScroll": true,
-  // Default to Prettier for formatting
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  // Default to Prettier for webapp formatting
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[typescript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[json]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[jsonc]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[html]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[css]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[scss]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
   // Default to typst-lsp for Typst formatting
   "[typst]": {
     "editor.defaultFormatter": "nvarner.typst-lsp"
@@ -158,5 +181,5 @@
       "after": ["^"]
     }
   ],
-  "terminal.integrated.defaultProfile.osx": "zsh",
+  "terminal.integrated.defaultProfile.osx": "zsh"
 }
