--- a/.gitconfig
+++ b/.gitconfig
@@ -18,8 +18,9 @@
     c = "!fish -c 'git_fzf_checkout'"
     cam = "!fish -c 'git_commit_all_message $argv'"
     camp = "!fish -c 'git_commit_all_message_push $argv'"
-    d = "!fish -c 'git_fzf_diff_file'"
-    ds = "!fish -c 'git_fzf_diff_file_staged'"
+    d = "diff"
+    df = "!fish -c 'git_fzf_diff_file'"
+    dfs = "!fish -c 'git_fzf_diff_file_staged'"
     db = "!fish -c 'git_fzf_diff_branch'"
     dbn = "!fish -c 'git_fzf_diff_branch_name_only'"
     l = "log --oneline --decorate"
