Add fish support extension

--- a/.config/Brewfile
+++ b/.config/Brewfile
@@ -114,6 +114,8 @@ vscode "nemesv.copy-file-name"
 vscode "denoland.vscode-deno"
 # Better error highlighting
 vscode "usernamehw.errorlens"
+# Fish support
+vscode "bmalehorn.vscode-fish"
 # GitLens to add lots of git features
 vscode "eamodio.gitlens"
 # GitHub Actions support
