Clean up git log aliases

--- a/.gitconfig
+++ b/.gitconfig
@@ -24,9 +24,10 @@
     db = "!fish -c 'git_fzf_diff_branch'"
     dbn = "!fish -c 'git_fzf_diff_branch_name_only'"
     dt = "difftool"
-    l = "log --oneline --decorate"
-    lf = "!fish -c 'git_fzf_commit_select'"
-    lfc = "!fish -c 'git_fzf_commit_select_copy'"
+    l = "log"
+    lc = "log --oneline --decorate"
+    ld = "!f() { GIT_EXTERNAL_DIFF=difft git log -p --ext-diff $@; }; f"
+    lp = "log -p"
     m = "!fish -c 'git_fzf_merge'"
     mt = "mergetool"
     r = "!fish -c 'git_fzf_restore'"
